# ResilienceKit

./: .gitignore  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  Taskfile.yml  worklog.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-review.yml  fr-coverage.yml  quality-gate.yml  release.yml  scorecard.yml
docs/: SPEC.md
docs/adr/: ADR-001-circuit-breaker.md  ADR-002-retry-strategy.md  ADR-003-rate-limiting.md  ADRS.md
docs/research/: RESILIENCE_PATTERNS_SOTA.md  SOTA-CIRCUIT-BREAKERS.md  SOTA-RESILIENCE.md
docs/sessions/20260428-taskfile-resiliencekit/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sota/: SOTA.md
docs/worklogs/: README.md
go/: go.work
python/ci-cd-kit/: README.md  pyproject.toml
python/ci-cd-kit/workflows/: qa_aegis.yml
python/deploy-kit/: EXTRACTION_SUMMARY.md  README.md  pyproject.toml
python/deploy-kit/src/pheno_deploy_kit/: __init__.py  checks.py  cli.py  hooks.py  install_hooks.py  startup.py  vendor.py
python/deploy-kit/src/pheno_deploy_kit/nvms/: __init__.py
python/pheno-deploy/: EXTRACTION_REPORT.md  README.md  pyproject.toml
python/pheno-deploy/original_source/scripts/: check_credentials.py
python/pheno-deploy/src/pheno_deploy/: __init__.py  cli.py
rust/: Cargo.toml
rust/core/phenotype-retry/: Cargo.toml
rust/phenotype-async-traits/: Cargo.toml
rust/phenotype-async-traits/src/: lib.rs
rust/phenotype-port-traits/: Cargo.toml
rust/phenotype-port-traits/src/: lib.rs
rust/phenotype-retry/: Cargo.toml
rust/phenotype-retry/src/: lib.rs
rust/phenotype-state-machine/: Cargo.toml
rust/phenotype-state-machine/src/: lib.rs  models.rs
tests/: conftest.py  test_cloud_errors.py  test_deploy_checks.py  test_deploy_config.py  test_deploy_hooks.py  test_deploy_utils.py  test_resilience_circuit_breaker.py  test_resilience_error_handler.py  test_resilience_health.py  test_resilience_retry.py
