[workspace]
resolver = "2"
members = [
    "phenotype-async-traits",
    "phenotype-retry",
    "phenotype-state-machine",
    "phenotype-port-traits",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/ResilienceKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
