[workspace]
resolver = "2"
members = [
    "phenotype-async-traits",
    "phenotype-retry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/ResilienceKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
# Migrated to phenoShared (was vendored locally; see kit-sdk-vendor-pattern-audit).
# Downstream consumers should pull these via workspace.dependencies.
phenotype-state-machine = { git = "https://github.com/KooshaPari/phenoShared.git", branch = "main" }
phenotype-port-interfaces = { git = "https://github.com/KooshaPari/phenoShared.git", branch = "main" }
