[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pheno-deploy-kit"
version = "0.1.0"
description = "Universal deployment toolkit with NVMS format for modern platforms, cloud, and pheno-sdk vendoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Koosha Pari", email = "kooshapari@gmail.com"}]
keywords = ["deployment", "vercel", "fly", "cloud", "nvms", "vendoring", "pheno"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
# Cloud providers
aws = ["boto3>=1.34.0"]
gcp = ["google-cloud-compute>=1.15.0"]
azure = ["azure-mgmt-compute>=30.4.0"]

# Container & orchestration
docker = ["docker>=7.0.0"]
k8s = ["kubernetes>=28.0"]

# Modern platforms
vercel = ["vercel>=0.10.0"]

# SSH deployment
ssh = ["paramiko>=3.4.0"]

# WebAssembly
wasm = ["wasmtime>=18.0.0"]

# Complete installation
full = [
    "boto3>=1.34.0",
    "google-cloud-compute>=1.15.0",
    "azure-mgmt-compute>=30.4.0",
    "docker>=7.0.0",
    "kubernetes>=28.0",
    "paramiko>=3.4.0",
    "wasmtime>=18.0.0",
    "vercel>=0.10.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
pheno-deploy = "pheno_deploy_kit.cli:main"
pheno-vendor = "pheno_deploy_kit.cli:main"
deploy-kit = "pheno_deploy_kit.cli:main"

[project.urls]
Homepage = "https://github.com/KooshaPari/ResilienceKit"
Repository = "https://github.com/KooshaPari/ResilienceKit"
Documentation = "https://github.com/KooshaPari/ResilienceKit/blob/main/python/deploy-kit/README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pheno_deploy_kit*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
