[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheno-deploy"
version = "0.1.0"
description = "Unified deployment CLI for Phenotype projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Phenotype", email = "dev@kooshapari.com" }
]
keywords = ["deployment", "cli", "devops", "release", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
pheno-deploy = "pheno_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/KooshaPari/ResilienceKit"
Documentation = "https://github.com/KooshaPari/ResilienceKit/tree/main/python/pheno-deploy"
Repository = "https://github.com/KooshaPari/ResilienceKit"

[tool.hatch.build.targets.wheel]
packages = ["src/pheno_deploy"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
