[package]
name = "phenotype-async-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
pin-project = "1.1"
rand = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }

[dev-dependencies]
