[package]
name = "phenotype-state-machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
phenotype-error-core = { git = "https://github.com/KooshaPari/phenoShared.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[lib]
name = "phenotype_state_machine"