[package]
name = "phenotype-retry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync", "rt"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util", "time"] }

[features]
default = []